Require Java 11+.